# ccstat

./: .editorconfig  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .golangci.yml  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  README.ts.md  go.mod  go.sum  jest.config.js  main.go  mise.toml  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsdown.config.ts
.claude/: settings.json
.claude/commands/: release.md  worktree-task.md
.github/workflows/: ci.yml  go-ci.yml  release.yml  typescript-ci.yml
ccmonitor/: __init__.py  __main__.py  claude_config.py  claude_logs.py  constants.py  database.py  display.py  git_utils.py  monitor.py  process.py  store.py  timeline_monitor.py  timeline_ui.py  util.py
cmd/: root.go
cmd/ccmonitor/: main.go  main_test.go
cmd/ccstat/: main.go
docs/: _config.yml  index.html  install.sh
go/: README.md  go.mod
go/cmd/ccstat/: main.go  main_test.go
go/cmd/ccstat-demo/: main.go
go/internal/claude/: parser.go  parser_test.go
go/internal/ui/: table.go
go/internal/updater/: version.go  version_test.go
internal/app/: monitor.go
internal/claude/: parser.go  parser_test.go
internal/git/: utils.go
internal/models/: session.go
internal/reader/: claude_logs.go
internal/ui/: app.go  model.go  styles.go  table.go  timeline.go
internal/updater/: client.go  updater.go
pkg/models/: events.go
scripts/: clean-worktrees.sh  fix-esm-imports.js
src/: claude_logs.rs  cli.rs  db.rs  git_utils.rs  lib.rs  main.rs  monitor.rs  process.rs  timeline_monitor.rs  timeline_ui.rs  ui.rs  utils.rs
src/cli/: index.test.ts  index.ts
src/core/: loader.ts
src/core/analyzer/: duration.ts
src/core/git/: index.ts  repository.ts
src/core/parser/: index.test.ts  index.ts  jsonl.ts  session.ts
src/core/parser/__tests__/: all-time.test.ts
src/models/: events.ts  models.ts
src/ui/: App.tsx  ProjectTable.tsx  colorThemes.test.ts  colorThemes.ts
src/ui/components/: HeaderRow.tsx  LoadingScreen.tsx  ProjectRow.tsx  ProjectTable.tsx  SummaryStatistics.tsx  TableHeader.tsx  TableTimeAxis.tsx  Timeline.tsx  TimelineBar.tsx  TitleRow.tsx
src/ui/utils/: tableUtils.ts
src/utils/: fs.ts  performance.ts  progressTracker.ts  sort.test.ts  sort.ts  time.ts
src/utils/__tests__/: progressTracker.test.ts  project-filter.test.ts  sort.test.ts
tests/: __init__.py  integration_tests.rs  test_claude_config.py  test_claude_logs.py  test_database.py  test_display.py  test_integration.py  test_main.py  test_monitor.py  test_process.py  test_store.py  test_timeline_monitor.py  test_timeline_ui.py  test_util.py
ts/: .eslintrc.json  .gitignore  CHANGELOG.md  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
ts/.husky/: pre-commit
ts/scripts/: fix-esm-imports.js
ts/src/cli/: index.ts
ts/src/core/git/: index.ts
ts/src/core/parser/: index.ts
ts/src/models/: events.ts
ts/src/ui/: App.tsx  ProjectTable.tsx
