[package]
name = "ccmonitor"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
# git2 = "0.20"  # Removed due to OpenSSL dependency, will use std::process::Command instead
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"
