[project]
name = "ccmonitor"
version = "0.1.0"
description = "Claude Code Monitor - Claude Codeのプロセス監視とリアルタイム可視化ツール"
authors = [{name = "ktny"}]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "polars>=0.20.0",
]

[project.scripts]
ccmonitor = "ccmonitor.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--verbose"]

[tool.coverage.run]
source = ["ccmonitor"]
